# SGD-game

./: .gitignore  CMakeLists-pracownia.txt  CMakeLists.txt  README.md  main.cpp
animation/: animation.cpp  animation.h
character/: character.h  enemy.cpp  enemy.h  player.cpp  player.h
collision/: collider.h  collisionhandler.cpp  collisionhandler.h
core/: game.cpp  game.h
objects/: object.h  player.cpp  player.h
physics/: rigidbody.cpp  rigidbody.h  transform.h  vector2d.h
render/: levelmap.cpp  levelmap.h  render.cpp  render.h
